--- a/public/css/fdat.css
+++ b/public/css/fdat.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+
+h1, h2, h3, h4, h5 {
+    //font-family: 'Cinzel', serif;
+    font-family: 'Comfortaa', cursive;
+}
+
+.fancy {
+    font-family: 'Comfortaa', cursive;
+}
+
 body { background-image: linear-gradient(to bottom right, #E3E3E3 0%, #8A9CB5 100%);}
 
 a:link, a:visited {
