--- a/public/css/fdat.css
+++ b/public/css/fdat.css
@@ -9,6 +9,12 @@ h1, h2, h3, h4, h5 {
     font-family: 'Comfortaa', cursive;
 }
 
+.breadcrumb {
+    float: left;
+    padding: 5px 5px 5px 5px;
+    margin: 0px 0px 0px 0px;
+}
+
 body { background-image: linear-gradient(to bottom right, #E3E3E3 0%, #8A9CB5 100%);}
 /*
 a:link, a:visited {
@@ -34,12 +40,12 @@ a:hover, a:focus, a:active {
  display: block;
 }
 
-/*
+
 .dropdown>.dropdown-toggle:active {
    pointer-events: none;
 }
 
-*/
+
 
 .zebra li:nth-child(odd)
 {
